[package]
name = "rf_5"
version = "0.1.0"
authors = ["bbrener1"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8"
# time = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
smallvec = "0.6"
zip = "0.5"

rayon = "1"

num-traits = "0.2"

ndarray = { version = "0.15", features = ['rayon'] }
